# github-docs-mcp

./: .gitignore  CACHE_SPEC.md  README.md  SECURITY.md  TOKEN_COMPARISON.md  TOKEN_SAVINGS_COMPARISON.md  USER_GUIDE.md  demo_mcp.py  pyproject.toml  test_server.py
benchmarks/: README.md  generate_datasets.py  run_benchmark.py
src/github_docs_mcp/: __init__.py  server.py
src/github_docs_mcp/parser/: __init__.py  hierarchy.py
src/github_docs_mcp/storage/: __init__.py  index_store.py
src/github_docs_mcp/summarizer/: __init__.py  batch_summarize.py
src/github_docs_mcp/tools/: __init__.py  get_section.py  get_toc.py  index_repo.py  search_sections.py
src/jdocmunch_mcp/: __init__.py  security.py  server.py
src/jdocmunch_mcp/parser/: markdown.py  rst.py
src/jdocmunch_mcp/storage/: index_store.py
src/jdocmunch_mcp/summarizer/: batch_summarize.py
src/jdocmunch_mcp/tools/: __init__.py  get_section.py  get_toc.py  index_local.py  index_repo.py  list_repos.py  search_sections.py
tests/: conftest.py  test_parser.py  test_security.py  test_storage.py  test_tools.py
