[project]
name = "jdocmunch-mcp"
version = "0.1.0"
description = "Token-efficient MCP server for GitHub documentation Q&A"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mistune>=3.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
jdocmunch-mcp = "jdocmunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jdocmunch_mcp"]
